# ReF-Dec

./: README.md  demo.py  merge.py  pyproject.toml  stage1_compile.py  test.c
data/: decompile-eval-gcc-rodata.json
eval/: concat_lib.py  eval.py  merge.py  show_table.py  stats.py
results/: results.jsonl  ylfeng_ReF-Decompile-lora.json
train/: compiler.py  rodata.py  stage2_build.py  train.yaml
train/deepspeed/: ds_z2_config.json
